test(CustomTrustManagerTest): Add tests for checkServerMethod